[gd_scene load_steps=20 format=3 uid="uid://dxuhjidss1q4q"]

[ext_resource type="Script" path="res://Assets/Scripts/Item/Traps/Arrow_Traps/Arrow_Shooter_Top.gd" id="1_jca88"]
[ext_resource type="Texture2D" uid="uid://8ergr6o1ax4p" path="res://Assets/Image/Items/Traps/Etc/Shooter_Arrow_Trap.png" id="1_wf4de"]
[ext_resource type="PackedScene" uid="uid://c1uaykkvn7v0t" path="res://Assets/Scences/Items/Traps/arow_trap.tscn" id="2_02xwo"]
[ext_resource type="AudioStream" uid="uid://d0k0j364o735p" path="res://Assets/Music/SFX/Weapon/Arrow/arrow-body-impact-146419.mp3" id="4_2v3jo"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_tyup5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5rn5s"]
atlas = ExtResource("1_wf4de")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_02tpb"]
atlas = ExtResource("1_wf4de")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8m7p"]
atlas = ExtResource("1_wf4de")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2vy0"]
atlas = ExtResource("1_wf4de")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhs5e"]
atlas = ExtResource("1_wf4de")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qptcb"]
atlas = ExtResource("1_wf4de")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_orwjs"]
atlas = ExtResource("1_wf4de")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3p5d"]
atlas = ExtResource("1_wf4de")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrido"]
atlas = ExtResource("1_wf4de")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_7kjne"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rn5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02tpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8m7p")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2vy0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhs5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qptcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_orwjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3p5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrido")
}],
"loop": false,
"name": &"shoot",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_od3v1"]
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["hit"]
}

[sub_resource type="Animation" id="Animation_172dq"]
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["shoot"]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../sfx")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_2v3jo")
}],
"times": PackedFloat32Array(0.6)
}
tracks/3/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ilpdl"]
_data = {
"hit": SubResource("Animation_od3v1"),
"shoot": SubResource("Animation_172dq")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_18pxq"]
radius = 7.07107

[node name="Arrow_Trap_Top" type="StaticBody2D"]
collision_layer = 1024
collision_mask = 0
physics_material_override = SubResource("PhysicsMaterial_tyup5")
script = ExtResource("1_jca88")
arrow_scene = ExtResource("2_02xwo")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
rotation = -3.14159
sprite_frames = SubResource("SpriteFrames_7kjne")
animation = &"shoot"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_ilpdl")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_18pxq")

[node name="ShootPoint" type="Marker2D" parent="."]
rotation = -1.5708
gizmo_extents = 0.0

[node name="TurretRaycast" type="RayCast2D" parent="."]
target_position = Vector2(0, -300)
collision_mask = 3
collide_with_areas = true

[node name="sfx" type="AudioStreamPlayer2D" parent="."]
area_mask = 8192

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
